--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>new_cwru_davinci_kinematics</name>
+  <name>cwru_davinci_kinematics</name>
   <version>0.0.0</version>
-  <description>The new_cwru_davinci_kinematics package</description>
+  <description>The cwru_davinci_kinematics package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/new_cwru_davinci_kinematics</url> -->
+  <!-- <url type="website">http://wiki.ros.org/cwru_davinci_kinematics</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
